--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URI = mongodb+srv://devssabbir2:As2bFrdsT6cqSd4c@cluster0.mqypi7o.mongodb.net/eventry
+RESEND_API_KEY = re_V8uVYZHe_H4UpfbhYagMEREtxjWXr4oBH
